--- a/debian/rules
+++ b/debian/rules
@@ -9,11 +9,11 @@ export DH_OPTIONS
 
 
 %:
-	dh $@ --with python2
+	dh $@ --with python2,apache2
 
 override_dh_fixperms:
 	dh_fixperms
-	chmod go+x debian/online-python-tutor-backend/usr/lib/cgi-bin/opt/web_exec.py
+	chmod go+x debian/online-python-tutor-backend/usr/lib/cgi-bin/online-python-tutor-backend/web_exec.py
 
 # Much borrowed from https://wiki.debian.org/onlyjob/get-orig-source :
 
